k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exp-dashboard-server
  namespace: data-ingestion
spec:
  selector:
    app: exp-dashboard-server
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
